benefits/static/css/styles.css
/* ... */
/* H2 */
/* Same sizes for all screen widths: 24px (24rem/16 = 1.5rem) */
/* Also has a class which can be applied to non-headline elements */
h2,
.h2 {
  font-size: var(--font-size-24px);
  line-height: var(--heading-line-height);
  letter-spacing: calc(var(--font-size-24px) * var(--letter-spacing-3));
}

@media (max-width: 992px) {
  /* H2 mobile sizing */
  /* Only used on Landing Pages */
  .h2-sm-p {
    font-size: var(--bs-body-font-size);
    font-weight: var(--bs-body-font-weight);
    letter-spacing: calc(var(--bs-body-font-size) * var(--letter-spacing-5));
    line-height: var(--heading-line-height);
    margin: 0;
  }

  /* H2: 20px, up to Small width */
  /* Only used on Help Pages */
  .h2-sm {
    font-size: var(--font-size-20px);
    line-height: var(--heading-line-height);
  }
}

/* H3 */
/* Same sizes for all screen widths: 20px (20rem/16 = 1.25rem) */
/* Also has a class which can be applied to non-headline elements */
h3,
.h3 {
  font-size: var(--h3-font-size);
  line-height: var(--heading-line-height);
  letter-spacing: calc(var(--h3-font-size) * var(--letter-spacing-5));
}

/* H4 */
/* Used for Agency Selector card, agency name */
:root {
  --h4-font-size: var(--font-size-18px);
  --h4-letter-spacing-percent: var(--letter-spacing-3);
}

@media (min-width: 992px) {
  :root {
    --h4-font-size: var(--font-size-20px);
    --h4-letter-spacing-percent: var(--letter-spacing-5);
  }
}

h4 {
  font-size: var(--h4-font-size);
  letter-spacing: calc(var(--h4-font-size) * var(--h4-letter-spacing-percent));
  line-height: var(--h4-line-height);
}

/* Main */
/* The minimum height is calculated by 100 viewport height minus Header and Footer height */
main {
  min-height: var(--main-content-min-height);
}

/* Footer */
/* Footer has same font styles on all screen widths */
/* Mobile first: One link per row, each link is 50px height */
/* Screen width above 992px - Footer is 50px height */
/* Total footer height is 50px on Desktop */
/* And 102 on Mobile */
/* Footer breakpoint set to 992px */
/* Note: Not all Footer styles are written in mobile-first */
/* to style the full-width line on mobile */
/* and the desktop container-width sizing */

:root {
  --footer-background-color: var(--dark-color);
  --footer-link-color: #73b3e7;
  --footer-link-width: 100%;
  --footer-link-hover-color: #0062ff;
  --footer-link-visited-color: #9b74d7;
  --footer-link-font-weight: var(--bold-font-weight);
  --footer-mobile-underline-color: var(--bs-white);
  --main-content-min-height: calc(100vh - 246px);
  /* 246px = Header Height (80px) + (Footer Link (50px) * Number of Links (2)) + Underline Height (2px) + Footer Margin Top (64px) */
}

@media (min-width: 992px) {
  :root {
    --footer-link-width: auto;
    --main-content-min-height: calc(100vh - 194px);
    /* 194px = Header Height (80px) + Footer Height (50px) + Footer Margin Top (64px) */
  }
}

footer {
  background: var(--footer-background-color);
  margin-top: 64px;
}

footer .footer-links li {
  width: var(--footer-link-width);
}

footer .footer-links li a {
  color: var(--footer-link-color);
  font-weight: var(--footer-link-font-weight);
  font-size: var(--bs-body-font-size);
  text-decoration: underline;
  letter-spacing: calc(var(--bs-body-font-size) * var(--letter-spacing-5));
  line-height: 50px;
}

footer .footer-links li a:hover {
  color: var(--footer-link-hover-color);
}

footer .footer-links li a:active,
footer .footer-links li a:visited {
  color: var(--footer-link-visited-color);
}

/* Custom non-mobile-first code to */
/* allow the mobile footer to have a */
/* full-width line beyond container-fluid width */
@media (max-width: 992px) {
  footer {
    margin-top: 64px;
  }

  footer .container {
    max-width: 100%;
    padding: 0;
  }

  footer .footer-links li:not(:last-child) {
    border-bottom: 2px solid var(--footer-mobile-underline-color);
  }
}

/* Header */

#header-container {
  height: 80px;
}

/* Language button */
#header-container .btn-outline-light {
  font-size: var(--bs-body-font-size);
  padding: 3.5px 29.01px; /* 126 x 38px, all screen sizes  */
}

/* Buttons */
/* Primary Button: Use all three classes: btn btn-lg btn-primary */
/* Set button width in parent with Bootstrap column */
/* Height: 60px on Desktop; 72 on mobile*/

:root {
  --primary-button-padding: 19px 0;
}

@media (min-width: 992px) {
  :root {
    --primary-button-padding: 13px 0;
  }
}

.btn.btn-lg.btn-primary {
  border-width: 2px;
  font-weight: var(--medium-font-weight);
  font-size: var(--font-size-20px);
  letter-spacing: calc(var(--font-size-20px) * var(--letter-spacing-2));
  width: 100%;
  padding: var(--primary-button-padding);
}

/* Unclear if this class is still necessary/different from .btn.btn-lg */
/* Only used in Form */
.btn-text {
  font-weight: var(--medium-font-weight);
  font-size: var(--font-size-20px);
  letter-spacing: calc(var(--font-size-20px) * var(--letter-spacing-2));
}

/* A button that actually is a text link */
/* TODO: Check if this is actually really used anymore */
.btn-link {
  color: var(--primary-color);
  text-decoration: underline;
}

/* Previous Button, Language Button */
.btn-outline-dark,
.btn-outline-light {
  border-width: 2px;
}

/* Custom button: Loading spinner */

.spinner-hidden .spinner-border {
  display: none;
}

.spinner-border {
  border-width: 3px;
  margin-left: 15px;
}

/* Custom button: Login.gov Button with text and SVG */
/* Used on Eligibility Start */

:root {
  --login-gov-button-font-size: var(--font-size-20px);
  --login-gov-button-max-width: 310px;
}

@media (min-width: 992px) {
  :root {
    --login-gov-button-font-size: var(--font-size-16px);
    --login-gov-button-max-width: 289px;
  }
}

#login {
  cursor: pointer;
  line-height: 1;
  text-transform: none;
  letter-spacing: 0;
  font-size: var(--login-gov-button-font-size);
  font-family: "Public Sans", Roboto, system-ui;
  max-width: var(--login-gov-button-max-width);
  text-decoration: none;
}
/* ... */

